introduced selector, and fixed some bugs

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,11 +24,14 @@
   },
   "keywords": [
     "SVG",
+    "interactive",
     "graphic",
     "graphics",
     "drag",
     "scale",
     "move",
-    "rotate"
+    "rotate",
+    "object",
+    "model"
   ]
 }
