--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grafikjs/react",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "./src/index.ts",
   "types":"./src/index.d.ts",
   "scripts": {
@@ -31,12 +31,15 @@
   },
   "keywords": [
     "SVG",
+    "interactive",
     "graphic",
     "graphics",
     "drag",
     "scale",
     "move",
     "rotate",
-    "react"
+    "react",
+    "object",
+    "model"
   ]
 }
