--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grafikjs/core",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "main": "./src/index.ts",
   "types":"./src/index.d.ts",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "author": "Andras Tovishati",
   "license": "MIT",
-  "description": "",
+  "description": "A lightweight JavaScript library for creating interactive SVG on the web.",
   "dependencies": {},
   "devDependencies": {
     "webpack":"*",
