--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -7,8 +7,8 @@
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "Node",
-    "strict": true,
-    "strictPropertyInitialization":false,
+    // "strict": true,
+    // "strictPropertyInitialization":false,
     "noImplicitAny":false,
     "baseUrl": ".",
     "paths": {
