--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grafikjs/react",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "main": "./src/index.ts",
   "types":"./src/index.d.ts",
   "scripts": {
@@ -9,9 +9,9 @@
   },
   "author": "Andras Tovishati",
   "license": "MIT",
-  "description": "",
+  "description": "A lightweight React library for creating interactive SVG on the web.",
   "dependencies":{
-    "@grafikjs/core":"^0.0.4",
+    "@grafikjs/core":"^0.0.5",
     "react": "*",
     "react-dom": "*"
   },
