--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,7 +20,8 @@
   "homepage":"https://grafikjs.andrasweb.com/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/andraswebcode/grafikjs/tree/main/packages/core"
+    "url": "https://github.com/andraswebcode/grafikjs/tree/main",
+    "directory": "packages/core"
   },
   "keywords": [
     "SVG",
