--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,9 @@
     //   ]
     // }
   },
-  // "include": [
-  //   "./src/**/*.ts",
-  //   "./src/**/*.tsx"
-  // ]
+  "include": [
+    "./src/**/*.ts",
+    "./src/**/*.tsx",
+	"./src/**/*.vue"
+]
 }
