--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,23 +1,18 @@
 {
-  "compilerOptions": {
-    "outDir": "./dist/",
-    "noImplicitAny": true,
-    "module": "es6",
-    "target": "es5",
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
-    "moduleResolution": "Node",
-    // "strict": true,
-    // "strictPropertyInitialization":false,
-    "noImplicitAny":false,
-    "baseUrl": ".",
-    "paths": {
-      "*": [
-        "src/*"
-      ]
-    }
-  },
-  "include": [
-    "./src/**/*.ts"
-  ]
+	"compilerOptions": {
+		"outDir": "./dist/",
+		"module": "es6",
+		"target": "es5",
+		"allowJs": true,
+		"allowSyntheticDefaultImports": true,
+		"moduleResolution": "Node",
+		// "strict": true,
+		// "strictPropertyInitialization":false,
+		"noImplicitAny": false,
+		"baseUrl": ".",
+		"paths": {
+			"*": ["src/*"]
+		}
+	},
+	"include": ["./src/**/*.ts"]
 }
