--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,23 @@
 {
-  "compilerOptions": {
-    "outDir": "./dist/",
-    "module": "es6",
-    "target": "es5",
-    "jsx": "react-jsx",
-    "lib": [
-        "es2019",
-        "es2015",
-        "dom"
-    ],
-    // "allowJs": true,
-    // "skipLibCheck":true,
-    "allowSyntheticDefaultImports": true,
-    "moduleResolution": "Node",
-    // "strict": true,
-    // "strictPropertyInitialization":false,
-    // "noImplicitAny":false,
-    // "baseUrl": ".",
-    // "paths": {
-    //   "*": [
-    //     "src/*"
-    //   ]
-    // }
-  },
-  "include": [
-    "./src/**/*.ts",
-    "./src/**/*.tsx",
-	"./src/**/*.vue"
-]
+	"compilerOptions": {
+		"outDir": "./dist/",
+		"module": "es6",
+		"target": "es5",
+		"jsx": "react-jsx",
+		"lib": ["es2019", "es2015", "dom"],
+		// "allowJs": true,
+		// "skipLibCheck":true,
+		"allowSyntheticDefaultImports": true,
+		"moduleResolution": "Node"
+		// "strict": true,
+		// "strictPropertyInitialization":false,
+		// "noImplicitAny":false,
+		// "baseUrl": ".",
+		// "paths": {
+		//   "*": [
+		//     "src/*"
+		//   ]
+		// }
+	},
+	"include": ["./src/**/*.ts", "./src/**/*.tsx", "./src/**/*.vue"]
 }
