--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -6,8 +6,8 @@
 		"allowJs": true,
 		"allowSyntheticDefaultImports": true,
 		"moduleResolution": "Node",
-		// "strict": true,
-		// "strictPropertyInitialization":false,
+		"strict": true,
+		"strictPropertyInitialization": false,
 		"noImplicitAny": false,
 		"baseUrl": ".",
 		"paths": {
