--- a/packages/canvas/package.json
+++ b/packages/canvas/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@grafikjs/core",
-	"version": "0.0.57",
+	"name": "@grafikjs/canvas",
+	"version": "0.0.1",
 	"main": "./src/index.ts",
 	"types": "./src/index.d.ts",
 	"scripts": {
@@ -10,21 +10,19 @@
 	"author": "Andras Tovishati",
 	"license": "MIT",
 	"description": "A lightweight JavaScript library for creating interactive SVG on the web.",
-	"dependencies": {},
-	"devDependencies": {
-		"webpack": "*",
-		"webpack-cli": "*",
-		"typescript": "*",
-		"ts-loader": "*"
+	"dependencies": {
+		"@grafikjs/core": "*"
 	},
+	"devDependencies": {},
 	"homepage": "https://grafikjs.andrasweb.com/",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/andraswebcode/grafikjs/tree/master",
-		"directory": "packages/core"
+		"directory": "packages/canvas"
 	},
 	"keywords": [
-		"SVG",
+		"HTML5",
+		"canvas",
 		"interactive",
 		"graphic",
 		"graphics",
@@ -32,6 +30,7 @@
 		"scale",
 		"move",
 		"rotate",
+		"vue",
 		"object",
 		"model"
 	]
