--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@grafikjs/vue",
-	"version": "0.0.24",
+	"version": "0.0.25",
 	"main": "./src/index.ts",
 	"types": "./src/index.d.ts",
 	"scripts": {
@@ -9,7 +9,7 @@
 	},
 	"author": "Andras Tovishati",
 	"license": "MIT",
-	"description": "A lightweight React library for creating interactive SVG on the web.",
+	"description": "A lightweight Vue library for creating interactive SVG on the web.",
 	"dependencies": {
 		"@grafikjs/core": "*",
 		"vue": "*"
@@ -21,7 +21,7 @@
 	"homepage": "https://grafikjs.andrasweb.com/",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/andraswebcode/grafikjs/tree/main",
+		"url": "https://github.com/andraswebcode/grafikjs/tree/master",
 		"directory": "packages/vue"
 	},
 	"keywords": [
