Installed jest, and make some unit tests for the math classes.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"start": "webpack serve",
 		"start:core": "npm start --prefix packages/core",
 		"build:core": "npm run build --prefix packages/core",
+		"test:core": "npm run test --prefix packages/core",
 		"start:vanilla": "npm start --prefix packages/vanilla",
 		"build:vanilla": "npm run build --prefix packages/vanilla",
 		"start:react": "npm start --prefix packages/react",
@@ -41,13 +42,16 @@
 		"vue": "*"
 	},
 	"devDependencies": {
+		"@types/jest": "^29.5.12",
 		"@types/node": "*",
 		"@types/react": "*",
 		"@types/react-dom": "*",
 		"css-loader": "*",
+		"jest": "^29.7.0",
 		"sass": "*",
 		"sass-loader": "*",
 		"style-loader": "*",
+		"ts-jest": "^29.2.3",
 		"ts-loader": "*",
 		"typescript": "*",
 		"vue-loader": "*",
